--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             </div>
             <div class="container02">
                 <div class="searchbar">
-                    <input type="search" placeholder="Enter City Name">
-                    <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <form>
+                        <input type="search" placeholder="Enter City Name">
+                        <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
                 </div>
             </div>
         </div>
